# NothingWin

./: .gitignore  CMakeLists.txt  README.md  main.cpp  prd.md  resources.qrc
src/: globalhotkey.cpp  globalhotkey.h  mainwindow.cpp  mainwindow.h  panicbutton.cpp  panicbutton.h  settings.cpp  settings.h  trayicon.cpp  trayicon.h
src/platform/windows/: hidewindows.cpp  hidewindows.h  keyboardhook.cpp  keyboardhook.h  systemvolume.cpp  systemvolume.h
translations/: nothingwin_zh.qm  nothingwin_zh.ts
